add paddings to words

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -24,6 +24,7 @@ p.cloud-letter
   > span
     &.cloud-word, &.cloud-space
       display: inline-block
+      padding: 0.2em 0.6em
 
     &.cloud-space
       width: var(--gap)
