--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -4,9 +4,6 @@ p.cloud-letter
   margin: 0
   padding: 0
   border: 0
-  font-family: sans-serif
-  font-size: 24px
-  line-height: 30px
   box-sizing: border-box
 
   display: flex
@@ -23,7 +20,7 @@ p.cloud-letter
 
   > span
     &.cloud-word, &.cloud-space
-      display: inline-block
+      // display: inline-block
       padding: 0.2em 0.6em
 
     &.cloud-space
