big paragraph check

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -14,14 +14,14 @@ p.cloud-letter
     padding: 0
     border: 0
     font-family: sans-serif
-    font-size: 24px
-    line-height: 30px
+    font-size: 16px
+    line-height: 20px
     box-sizing: border-box
 
   > span
     &.cloud-word, &.cloud-space
       // display: inline-block
-      padding: 0.2em 0.6em
+      padding: 3px 9px
 
     &.cloud-space
       width: var(--gap)
