--- a/src/index.sass
+++ b/src/index.sass
@@ -12,17 +12,16 @@
   line-height: 1rem
   box-sizing: border-box
 
-html, body
+html, body, #root
   width: 100%
   height: 100%
   position: fixed
   overflow: hidden
 
 #root
-  width: 100%
-  min-height: 100%
   display: grid
   place-items: center
+  overflow: auto
 
 
 
