--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -2,13 +2,9 @@ p.cloud-letter
   position: relative
 
   margin: 0
-  padding: 0
+  padding: 40px
   border: 0
   box-sizing: border-box
-
-  display: flex
-  flex-wrap: wrap
-  justify-content: center
 
   *
     margin: 0
@@ -21,11 +17,12 @@ p.cloud-letter
 
   > span
     &.cloud-word, &.cloud-space
-      // display: inline-block
+      display: inline-block
       padding: 3px 9px
 
     &.cloud-space
       width: var(--gap)
+      white-space: pre
 
   > canvas.cloud-canvas
     position: absolute
