provide text-align prop

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -2,9 +2,10 @@ p.cloud-letter
   position: relative
 
   margin: 0
-  padding: 40px
+  padding: 0
   border: 0
   box-sizing: border-box
+  text-align: var(--align)
 
   *
     margin: 0
@@ -19,6 +20,7 @@ p.cloud-letter
     &.cloud-word, &.cloud-space
       display: inline-block
       padding: 3px 9px
+      text-align: center
 
     &.cloud-space
       width: var(--gap)
