--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,3 @@
-:root
-  color-scheme: light dark
-  color: #eee
-  background-color: #111
-
 *
   margin: 0
   padding: 0
@@ -17,15 +12,9 @@ html, body, #root
   height: 100%
   position: fixed
   overflow: hidden
+  background-color: #adf
 
 #root
   display: grid
   place-items: center
   overflow: auto
-
-
-
-@media (prefers-color-scheme: light)
-  :root
-    color: #111
-    background-color: #eee
