--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -8,22 +8,20 @@ p.cloud-letter
   text-align: var(--align)
 
   > span
-    &.cloud-word, &.cloud-space
+    &.cloud-element
       display: inline-block
-      
       margin: 0
       padding: 3px 9px
       border: 0
+      box-sizing: border-box
 
       font-family: sans-serif
       font-size: 16px
       line-height: 20px
-
-      box-sizing: border-box
       text-align: center
       white-space: pre
 
-    &.cloud-space
+    &.cloud-element.space
       width: var(--gap)
 
   > canvas.cloud-canvas
