--- a/src/index.sass
+++ b/src/index.sass
@@ -16,5 +16,15 @@ html, body, #root
 
 #root
   display: grid
+  grid-template: 1fr 1fr / auto
   place-items: center
   overflow: auto
+
+textarea
+  padding: 0.4rem 0.4rem
+  outline: none
+  border: solid 2px black
+  border-radius: 0.5rem
+  font-size: 0.8rem
+  line-height: 1.2em
+  resize: none
