--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -18,7 +18,7 @@ p.cloud-letter
       font-family: sans-serif
       font-size: 16px
       line-height: 20px
-      text-align: center
+      text-align: var(--align)
       white-space: pre
 
     &.cloud-element.space
