set font`s color, weight, and color

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -15,7 +15,9 @@ p.cloud-letter
       border: 0
       box-sizing: border-box
 
-      font-family: sans-serif
+      color: #47f
+      font-family: 'Courier New', Courier, monospace
+      font-weight: bold
       font-size: 16px
       line-height: 20px
       text-align: var(--align)
