fix: spaces with padding may have bigger then unit width

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -24,6 +24,7 @@ p.cloud-letter
       white-space: pre
 
     &.cloud-element.space
+      padding: 0
       width: var(--gap)
 
   > canvas.cloud-canvas
