fix: del line-height of container (behave like min line-height for childs)

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -5,6 +5,8 @@ p.cloud-letter
   padding: 0
   border: 0
   box-sizing: border-box
+  font-size: 0
+  line-height: 0
   text-align: var(--align)
   background-color: #0001
 
