del ver.padding, use line-height instead

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -8,13 +8,12 @@ p.cloud-letter
   font-size: 0
   line-height: 0
   text-align: var(--align)
-  background-color: #0001
 
   > span
     &.cloud-element
       display: inline-block
       margin: 0
-      padding: 7px 16px
+      padding: 0 10px
       border: 0
       box-sizing: border-box
 
@@ -22,16 +21,13 @@ p.cloud-letter
       font-family: 'Courier New', Courier, monospace
       font-weight: bold
       font-size: 16px
-      line-height: 20px
+      line-height: 28px
       text-align: var(--align)
       white-space: pre
 
     &.cloud-element.space
-      padding: 7px 0
-      width: var(--gap)
-
-    &.cloud-element.space.idle
       padding: 0
+      width: var(--gap)
 
   > canvas.cloud-canvas
     position: absolute
