--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -11,6 +11,7 @@ p.cloud-letter
 
   > span
     &.cloud-element
+      position: relative
       display: inline-block
       margin: 0
       padding: 0 10px
