--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -18,7 +18,7 @@ p.cloud-letter
       border: 0
       box-sizing: border-box
 
-      color: #47f
+      color: DodgerBlue
       font-family: 'Courier New', Courier, monospace
       font-weight: bold
       font-size: 16px
