pass --height from CloudLetter

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -22,7 +22,7 @@ p.cloud-letter
       font-family: 'Courier New', Courier, monospace
       font-weight: bold
       font-size: 16px
-      line-height: 28px
+      line-height: var(--height)
       text-align: var(--align)
       white-space: pre
 
