--- a/src/index.sass
+++ b/src/index.sass
@@ -44,7 +44,7 @@ form.controls
     &:first-child
       border-top: none
 
-    &.space-width
+    &.space-width, &.cloud-height
       > input[type=range]
         flex-grow: 1
 
