--- a/src/index.sass
+++ b/src/index.sass
@@ -68,10 +68,12 @@ form.controls
       display: flex
       align-items: center
       gap: 0.4rem
+      white-space: pre
 
       &.snap
         > input[type=number]
           width: 30px
+          text-align: center
           border-bottom: var(--brd)
 
 input::-webkit-outer-spin-button,
