--- a/src/index.sass
+++ b/src/index.sass
@@ -25,6 +25,14 @@ html, body, #root
   place-items: center
   overflow: auto
 
+a.repo-link
+  position: absolute
+  right: 0.5rem
+  bottom: 0.5rem
+  color: var(--fill)
+  font-size: 0.8rem
+  text-decoration: none
+
 form.controls
   border: var(--brd)
   border-radius: 7px
