fix: if first elements are spaces

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -7,6 +7,7 @@ p.cloud-letter
   line-height: 0
   box-sizing: border-box
   text-align: var(--align)
+  white-space: pre-wrap
 
   > span
     &.cloud-element
