recieve padding prop

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -14,7 +14,7 @@ p.cloud-letter
       position: relative
       display: inline-block
       margin: 0
-      padding: 0 10px
+      padding: var(--padding)
       border: 0
       box-sizing: border-box
       white-space: pre
