pass font-style, font-variant, font-weight props

--- a/src/component/cloud.sass
+++ b/src/component/cloud.sass
@@ -22,6 +22,9 @@ p.cloud-letter
       color: var(--color)
       font-size: var(--font-size)
       font-family: var(--font-family)
+      font-style: var(--font-style)
+      font-variant: var(--font-variant)
+      font-weight: var(--font-weight)
       line-height: var(--height)
       text-align: var(--align)
 
