--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,5 @@
 :root
+  --bg: white //#adf
   --fill: DodgerBlue
   --brd: 2px solid var(--fill)
 
@@ -17,7 +18,7 @@ html, body, #root
   height: 100%
   position: fixed
   overflow: hidden
-  background-color: #adf
+  background-color: var(--bg)
 
 #root
   display: grid
