--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,5 @@
+// @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap')
+
 :root
   --bg: white //#adf
   --fill: DodgerBlue
